vlib/v/checker/tests/fn_arg_of_optional_err.out
vlib/v/checker/tests/fn_arg_of_optional_err.vv:1:19: error: optional or result type argument is not supported currently
    1 | fn optional_arg(x ?int) {
      |                   ~~~~
    2 |     println('int type: $x')
    3 | }
