vlib/v/checker/tests/fn_arg_of_optional_err.vv
fn optional_arg(x ?int) {
	println('int type: $x')
}

fn main() {
	optional_arg(1)
}
